--- a/Maiter/src/examples/CMakeLists.txt
+++ b/Maiter/src/examples/CMakeLists.txt
@@ -18,11 +18,11 @@ add_library(example
             ${EXAMPLE_PB_SRC})
             
 add_dependencies(example worker_proto common_proto)
-add_executable(example-dsm main.cc)
+add_executable(maiter main.cc)
 
 # we need to resolve static initializers, so glob all the symbols together with -whole-archive
-target_link_libraries(example-dsm -Wl,-whole-archive common worker kernel master example -Wl,-no-whole-archive)
-target_link_libraries(example-dsm gflags glog webgraph)
+target_link_libraries(maiter -Wl,-whole-archive common worker kernel master example -Wl,-no-whole-archive)
+target_link_libraries(maiter gflags glog webgraph)
 
-target_link_libraries(example-dsm ${EXAMPLE_LIBS})
+target_link_libraries(maiter ${EXAMPLE_LIBS})
 
