--- a/src/external/google-flags/CMakeLists.txt
+++ b/src/external/google-flags/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(gflags
-            gflags.cc
-            gflags_reporting.cc
-            gflags_nc.cc)
+			gflags.cc
+			gflags_reporting.cc
+			gflags_completions.cc)
 
