replace old network implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,7 +82,7 @@ string(REPLACE " " ";" MPI_LINK_FLAGS "${MPI_LINK_FLAGS}")
 string(REPLACE " " ";" MPI_LIBDIRS "${MPI_LIBDIRS}")
 string(REPLACE " " ";" MPI_LIBS "${MPI_LIBS}")
 
-set(CMAKE_CXX_FLAGS "${CXX_DEFAULT} -fPIC -fno-omit-frame-pointer -g0 ${CXX_DEFINE}")
+set(CMAKE_CXX_FLAGS "${CXX_DEFAULT} -fPIC -fno-omit-frame-pointer -O2 -g0 ${CXX_DEFINE}")
 		    		     
 add_subdirectory (external/google-flags)
 add_subdirectory (external/google-logging)
@@ -105,6 +105,7 @@ include_directories(${MPI_INCDIRS})
 
 set(CMAKE_CXX_FLAGS "${CXX_DEFAULT} -fPIC -fno-omit-frame-pointer -std=c++0x -ggdb1 ${CXX_WARN} ${CXX_DEFINE}")
 add_subdirectory (util)
+add_subdirectory (net)
 add_subdirectory (worker)
 add_subdirectory (kernel)
 add_subdirectory (master)
