1, remove dependency on boost::thread and boost:mutex. 2, separate the final global table class, "TypedGlobalTable<K,V1,V2,V3>", as a separated file

--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -2,5 +2,6 @@ add_library(kernel
             kernel.cc 
             table-registry.cc 
             local-table.cc
-            global-table.cc)
+            global-table.cc
+            kernel/DSMKernel.cc)
 add_dependencies(kernel worker_proto)
