separated helper classes from master.h and master.cc file

--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(master master.cc ${WORKER_PB_SRC} ${WORKER_PB_HDR})
+add_library(master
+		master.cc
+		worker-handle.cc
+		${WORKER_PB_SRC} ${WORKER_PB_HDR})
 add_dependencies(master worker_proto)
