--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -3,7 +3,7 @@ set(EXAMPLE_LIBS
 	${MPI_LIBS}
 	${BLAS_LIBS}
   	${PROTOBUF_LIBS})  	  	
-set(EXAMPLE_LIBS ${EXAMPLE_LIBS} boost_thread boost_system util z lzo2 pthread rt)
+set(EXAMPLE_LIBS ${EXAMPLE_LIBS} util z lzo2 pthread rt)
 
 add_custom_target(example_proto DEPENDS ${EXAMPLE_PB_HDR})
 
@@ -21,7 +21,7 @@ add_dependencies(example worker_proto common_proto)
 add_executable(maiter main.cc)
 
 # we need to resolve static initializers, so glob all the symbols together with -whole-archive
-target_link_libraries(maiter -Wl,-whole-archive common net worker kernel master example -Wl,-no-whole-archive)
+target_link_libraries(maiter -Wl,-whole-archive dbg common net worker kernel master example -Wl,-no-whole-archive)
 target_link_libraries(maiter gflags glog webgraph)
 
 target_link_libraries(maiter ${EXAMPLE_LIBS})
