1, separate table and kernel into 2 subfolders. 2 totally remove the dependency on boost

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -104,11 +104,13 @@ link_directories(${MPI_LIBDIRS})
 include_directories(${MPI_INCDIRS})
 
 set(CMAKE_CXX_FLAGS "${CXX_DEFAULT} -fPIC -fno-omit-frame-pointer -std=c++0x -ggdb1 ${CXX_WARN} ${CXX_DEFINE}")
+add_subdirectory (dbg)
 add_subdirectory (util)
 add_subdirectory (net)
-add_subdirectory (worker)
+add_subdirectory (table)
 add_subdirectory (kernel)
 add_subdirectory (master)
+add_subdirectory (worker)
 add_subdirectory (examples)
 
 if (NOT SWIG_FOUND)
