--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -1,7 +1,2 @@
 add_library(kernel 
-            kernel.cc 
-            table-registry.cc 
-            local-table.cc
-            global-table.cc
-            kernel/DSMKernel.cc)
-add_dependencies(kernel worker_proto)
+            kernel.cc DSMKernel.cc)
