1, sort up the dependency on util/common.h (file.h timer.h). 2, sort up the reference to std::*. 3, separate TableHelper.h

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(common
             common.cc 
             file.cc 
             stringpiece.cc
-            #rpc.cc 
+            timer.cc
             static-initializers.cc 
             ${COMMON_PB_SRC} 
             ${COMMON_PB_HDR})
