sort up message related code

--- a/src/worker/CMakeLists.txt
+++ b/src/worker/CMakeLists.txt
@@ -1,5 +1,4 @@
-protobuf_generate_cpp( WORKER_PB_SRC WORKER_PB_HDR ${MAITER_SOURCE_DIR} worker.proto )
-add_custom_target(worker_proto DEPENDS ${WORKER_PB_HDR})
-
-add_library(worker worker.cc ${WORKER_PB_SRC} ${WORKER_PB_HDR})
-add_dependencies(worker common_proto)
+add_library(worker
+			worker.cc
+			)
+add_dependencies(worker msg)
