--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_library(master
 		master.cc
-		worker-handle.cc
-		${WORKER_PB_SRC} ${WORKER_PB_HDR})
-add_dependencies(master worker_proto)
+		worker-handle.cc)
+add_dependencies(master msg)
