cutting master.cc into several files according to their logic

--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_library(master
 		master.cc
-		worker-handle.cc)
+		master2.cc
+		master_checkpoint.cc
+		worker-handle.cc
+		)
 add_dependencies(master msg)
