--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -4,5 +4,6 @@ add_library(master
 		master_checkpoint.cc
 		master_handler.cc
 		worker-handle.cc
+		run-descriptor.cc
 		)
 add_dependencies(master msg)
