polish the graph generator

--- a/gen/makefile
+++ b/gen/makefile
@@ -10,12 +10,12 @@ export CXX CC CFLAGS CPPFLAGS OPROFILE
 all: release 
 
 release: 
-	$(CXX) $(RELFLAGS) gen.cpp -o gen
-	$(CXX) $(RELFLAGS) deltaGen.cpp -o deltaGen
+	$(CXX) $(RELFLAGS) gen.cpp -o gen.exe
+	$(CXX) $(RELFLAGS) deltaGen.cpp -o deltaGen.exe
 
 debug: 
-	$(CXX) $(DBGFLAGS) gen.cpp -o gen
-	$(CXX) $(DBGFLAGS) deltaGen.cpp -o deltaGen
+	$(CXX) $(DBGFLAGS) gen.cpp -o gen.exe
+	$(CXX) $(DBGFLAGS) deltaGen.cpp -o deltaGen.exe
 
 clean:
 	rm -rf bin/*
