--- a/src/table/CMakeLists.txt
+++ b/src/table/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(table
             local-table.cc
             global-table.cc
             table-registry.cc)
-add_dependencies(table worker_proto)
+#add_dependencies(table worker_proto)
