add 3 new application: connected-component, widest-path, min-spanning-tree

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -13,7 +13,9 @@ add_library(example
             #adsorption.cc
             #katz.cc
             #simrank.cc
-            #con_component.cc
+            con_component.cc
+            widestpath.cc
+            minspantree.cc
             ${EXAMPLE_PB_HDR} 
             ${EXAMPLE_PB_SRC})
             
