1, fix. 2, modify running script organization

--- a/gen/makefile
+++ b/gen/makefile
@@ -2,7 +2,7 @@ CXX ?= g++
 CC ?= gcc
 MAKE ?= make
 CPPFLAGS += -std=c++11
-EXE = gen deltaGen delta-gen2
+EXE = gen delta-gen delta-gen2
 
 DBGFLAGS = $(CPPFLAGS) -g
 RELFLAGS = $(CPPFLAGS) -O2
@@ -17,7 +17,7 @@ all: release
 gen.exe: gen.o
 	$(CXX) $(CPPFLAGS) $^ -o $@
 
-deltaGen.exe: deltaGen.o
+delta-gen.exe: delta-gen.o
 	$(CXX) $(CPPFLAGS) $^ -o $@
 
 delta-gen2.exe: delta-gen2.o common.h common.o
