add benchmark for pagerank and connected-component

--- a/benchmark/makefile
+++ b/benchmark/makefile
@@ -5,7 +5,7 @@ CPPFLAGS += -std=c++11
 DBGFLAGS = $(CPPFLAGS) -g
 RELFLAGS = $(CPPFLAGS) -O2
 
-EXE = sssp sswp #pagerank 
+EXE = sssp sswp pagerank concomp
 
 #export CXX CC CFLAGS CPPFLAGS
 
@@ -14,10 +14,7 @@ all: release
 %.o: %.cpp
 	$(CXX) $(CPPFLAGS) $^ -c -o $@
 
-sssp.exe: sssp.o common.o
-	$(CXX) $(CPPFLAGS) $^ -o $@
-
-sswp.exe: sswp.o common.o
+%.exe: %.o common.o
 	$(CXX) $(CPPFLAGS) $^ -o $@
 
 release: 
