add undirected graph support

--- a/gen/makefile
+++ b/gen/makefile
@@ -2,18 +2,18 @@ CXX ?= g++
 CC ?= gcc
 MAKE ?= make
 CPPFLAGS += -std=c++11
-EXE = gen delta-gen delta-gen-uw delta-gen2
+EXE = gen delta-gen delta-gen-uw delta-gen-ce
 
 DBGFLAGS = $(CPPFLAGS) -g
 RELFLAGS = $(CPPFLAGS) -O2
 
-export CXX CC CFLAGS CPPFLAGS OPROFILE
+#export CXX CC CFLAGS CPPFLAGS OPROFILE
 
 all: release 
 
-%.o: %.cpp
-	$(CXX) $(CPPFLAGS) $^ -c -o $@
-	
+#%.exe: %.o common.o
+#	$(CXX) $(CPPFLAGS) $^ -o $@
+
 gen.exe: gen.o
 	$(CXX) $(CPPFLAGS) $^ -o $@
 
@@ -23,7 +23,7 @@ delta-gen.exe: delta-gen.o
 delta-gen-uw.exe: delta-gen-uw.o
 	$(CXX) $(CPPFLAGS) $^ -o $@
 	
-delta-gen2.exe: delta-gen2.o common.h common.o
+delta-gen-ce.exe: delta-gen-ce.o common.h common.o
 	$(CXX) $(CPPFLAGS) ${^:%.h=} -o $@
 
 release: 
