--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -9,10 +9,11 @@ set(EXAMPLE_LIBS ${EXAMPLE_LIBS} util z lzo2 pthread rt)
 
 add_library(example 
             pagerank.cc
-            shortestpath.cc
+            jacobi.cc
             #adsorption.cc
             #katz.cc
             #simrank.cc
+            shortestpath.cc
             con_component.cc
             widestpath.cc
             minspantree.cc
