--- a/src/table/CMakeLists.txt
+++ b/src/table/CMakeLists.txt
@@ -1,6 +1,25 @@
+set(HEADERS
+	table.h
+	table_itertor.h
+	table-coder.h
+	table-create.h
+	table-interfaces.h
+	table-registry.h
+	TableDescriptor.h
+	TableHelper.h
+
+	local-table.h
+	deltatable.h
+	statetable.h
+	global-table.h
+	typed-global-table.hpp
+)
+set(SOURCES
+	ableDescriptor.cc
+	local-table.cc
+	global-table.cc
+	table-registry.cc
+)
 add_library(table 
-			TableDescriptor.cc
-            local-table.cc
-            global-table.cc
-            table-registry.cc)
+	${HEADERS} ${SOURCES})
 #add_dependencies(table worker_proto)
