--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,6 +1,20 @@
+set(HEADERS
+	common.h
+	file.h
+	hash.h
+	mashal.hpp
+	mashalled_map.hpp
+#	noncopyable.h
+	stringpiece.h
+	timer.h
+#	tuple.h
+)
+set(SOURCES
+	common.cc 
+	file.cc 
+	stringpiece.cc
+	timer.cc
+	static-initializers.cc
+)
 add_library(common
-            common.cc 
-            file.cc 
-            stringpiece.cc
-            timer.cc
-            static-initializers.cc)
+	${HEADERS} ${SOURCES})
