--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory (kernel)
 add_subdirectory (master)
 add_subdirectory (worker)
 add_subdirectory (examples)
+add_subdirectory (main)
