--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(common
-            common.cc 
-            file.cc 
-            stringpiece.cc
-            timer.cc
-            static-initializers.cc)
+	common.cc 
+	file.cc 
+	stringpiece.cc
+	timer.cc
+	static-initializers.cc
+)
+target_link_libraries(common ${LZO2_LIBS})
