--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -3,4 +3,6 @@ add_library(net
 	NetworkImplMPI.cc
 	Task.cc
 )
-target_link_libraries(net ${CMAKE_THREAD_LIBS_INIT})
+target_compile_options(net PRIVATE ${MPI_CXX_COMPILE_FLAGS})
+target_link_options(net PRIVATE ${MPI_CXX_LINK_FLAGS})
+target_link_libraries(net ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} ${Protobuf_LIBRARIES})
