more compatibility fix

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(maiter main.cc)
 target_link_libraries(maiter
 	-Wl,-whole-archive
 	common net msg driver table kernel worker master example
-	#-Wl,-no-whole-archive
+	-Wl,-no-whole-archive
 )
 target_link_libraries(maiter gflags)
 target_link_libraries(maiter ${GLOG_LIBS})
