--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(net
 )
 target_compile_options(net PRIVATE ${MPI_CXX_COMPILE_FLAGS})
 #target_link_options(net PRIVATE ${MPI_CXX_LINK_FLAGS})
-target_link_libraries(net ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES} ${Protobuf_LIBRARIES})
+target_link_libraries(net ${CMAKE_THREAD_LIBS_INIT} ${MPI_CXX_LIBRARIES})
