fix a linking bug

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,11 +1,12 @@
 add_library(example
+	examples.cc
 	pagerank.cc
 	shortestpath.cc
 	#adsorption.cc
 	#katz.cc
 	#simrank.cc
 	#con_component.cc
-)
+ )
 
-add_dependencies(example common_proto)
+#add_dependencies(example common_proto)
 
