optimize serialization for SYNC and VS checkpoint types

--- a/src/table/CMakeLists.txt
+++ b/src/table/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(table 
 			TableDescriptor.cc
+            table-coder.cc
             local-table.cc
             global-table.cc
             table-registry.cc)
